compiler/tests/template/fail/wrong_length.jazz
fn f{k}(reg ptr u64[k] r) -> reg u64 {
  reg u64 res = r[0];
  return res;
}

param int N = 5;

export fn main () -> reg u64 {
  stack u64[N] s;
  inline int i;
  for i = 0 to N {
    s[i] = i;
  }
  reg u64 res = f{2}(s); // s is of length N = 5, not 2
  return res;
}
